src/objects/Cir_Planner_Schedule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used as reference if requests are within circulation planning schedule.</description>
    <fields>
        <fullName>Mon_Fri_End_Time__c</fullName>
        <label>Mon-Fri End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mon_Fri_Start_Time__c</fullName>
        <label>Mon-Fri Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sat_PH_End_Time__c</fullName>
        <label>Sat/PH End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sat_PH_Start_Time__c</fullName>
        <label>Sat/PH Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sun_End_Time__c</fullName>
        <label>Sun End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sun_Start_Time__c</fullName>
        <label>Sun Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Cir Planner Schedule</label>
</CustomObject>